# hello-cpp

./: .env  .env.example  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  HACKING.md  README.md
bitbake/: hello-cpp.bb
cmake/: coverage.cmake  dev-mode.cmake  docs-ci.cmake  docs.cmake  install-rules.cmake  variables.cmake  windows-set-path.cmake
service/: hello-cpp.service
source/: lib.cpp  main.cpp
src/: main.cpp
src/app/: app.h  app.hh  app_test.cc  app_test.hh
src/app/hello/: hello.cc  hello.hh
src/core/redis/: redis.cc  redis.hh
src/core/redis-bus/: redis-bus.cc  redis-bus.hh
src/core/redis-msg/: redis-msg.cc  redis-msg.hh
src/lib/: readme
src/lib/dotenv/: dotenv.c
src/lib/libuuidpp/: libuuidpp.hpp
src/utils/: cvt.h  env.h  log.h  readme  uid.h  utils.h
test/: CMakeLists.txt
test/source/: hello-cpp_test.cpp
test/src/: hello-cpp_test.cpp
